--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,20 @@
+# Node / Next.js
 node_modules
+.next
+out
+dist
+
+# Logs
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+# Env
+.env
+.env.local
+.env.*.local
+
+# OS
+.DS_Store
+Thumbs.db
+.vercel
