--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "next": "14.2.13",
     "react": "18.3.1",
     "react-dom": "18.3.1",
-    "react-icons": "^5.2.1"
+    "react-icons": "^5.2.1",
+    "react-spotify-web-playback": "^0.14.7"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.16",
