--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "framer-motion": "^11.18.2",
+    "lucide-react": "^0.542.0",
     "next": "14.2.13",
     "react": "18.3.1",
     "react-dom": "18.3.1",
